infrastructure/service.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/name: aws-load-balancer-controller
  name: aws-load-balancer-controller
  namespace: kube-system
  annotations:
    eks.amazonaws.com/role-arn: arn:aws:iam::311195330804:role/loadbalancer-controller-role
root@node1:/home/ahannan/devops-veve/infrastructure# cat service.yaml 
apiVersion: v1
kind: Service
metadata:
  name: boiler-plate-svc
spec:
  type: NodePort
  selector:
    app: boiler-plate
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30007
